# elicit-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/api/: client.rs  mod.rs  models.rs
src/commands/: agent_info.rs  config.rs  doctor.rs  mod.rs  report.rs  review.rs  search.rs  skill.rs  trials.rs  update.rs
tests/: agent_info_contract.rs  api_commands.rs  exit_code_contracts.rs  output_contracts.rs  robustness.rs  update_contract.rs
