[package]
name = "elicit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Agent-grade CLI for the Elicit research API: semantic paper search, clinical-trial search, research reports, and systematic reviews"
license = "MIT"
repository = "https://github.com/paperfoot/elicit-cli"

[[bin]]
name = "elicit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
